# dec-renta-schwab

./: .gitignore  README.md  pyproject.toml  test_isin.py
src/common/: fx.py  io.py  processor.py  report.py  schwab.py
src/dec_renta/: __main__.py
src/model_100/: cli.py
src/model_720/: cli.py
src/renta_bolsa/: __main__.py
src/renta_bolsa/modules/: io.py  report.py  schwab.py
src/renta_bolsa/utils/: dictionary.py  fx.py  pandas_transform.py
